added detail views

--- a/djangoprojects/ecommerce/ecom/laptops/templates/laptops/detail.html
+++ b/djangoprojects/ecommerce/ecom/laptops/templates/laptops/detail.html
@@ -11,12 +11,12 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<h1>{{ detail.productBrand }}</h1>
-<img src="{{ detail.imageUrl }}" alt="{{ detail.productBrand }}">
-<p>{{ detail.amount }}</p> <br>
-<a href="{{ detail.productUrl }}" class="btn btn-small">Delete</a>
+<h1>{{ list.productBrand }}</h1>
+<img src="{{ list.imageUrl }}" alt="{{ list.productBrand }}">
+<p>{{ list.amount }}</p> <br>
+<a href="{{ list.productUrl }}" class="btn btn-small">Buy</a>
 <div>
-    {{ detail.productDescription }}
+    {{ list.productDescription }}
 </div>
 </div>
 </div>
