--- a/djangoprojects/ecommerce/ecom/laptops/templates/laptops/detail.html
+++ b/djangoprojects/ecommerce/ecom/laptops/templates/laptops/detail.html
@@ -11,12 +11,14 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<h1>{{ list.productBrand }}</h1>
-<img src="{{ list.imageUrl }}" alt="{{ list.productBrand }}">
-<p>{{ list.amount }}</p> <br>
-<a href="{{ list.productUrl }}" class="btn btn-small">Buy</a>
+<p><a href="{% url 'laptops:index' %}">Back to Laptops</a></p>
+<p>{{ object.id }}</p>
+<h1>{{ object.productBrand }}</h1>
+<img src="{{ object.imageUrl }}" alt="{{ object.productBrand }}">
+<p>{{ object.amount }}</p> <br>
+<a href="{{ object.productUrl }}" class="btn btn-primary">Buy</a>
 <div>
-    {{ list.productDescription }}
+    {{ object.productDescription }}
 </div>
 </div>
 </div>
